logging and improvements
Signed-off-by: Attila Mészáros <a_meszaros@apple.com>